<resources>
    <string name="app_name">Zvandiri</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="date_mismatch_error">End date can not be before start date</string>
    <string name="date_aftertoday">Date can not be in the future</string>
    <string name="date_before_birth">Date cannot be before individual was born</string>
    <string name="referral_date_after_date_attended">Date attended cannot be before referral date</string>
    <string name="date_too_early">Date too early</string>
    <string name="mobile_number_format">Mobile number not valid</string>
    <string name="female_too_young">Too young to be a mom</string>
    <string name="cat_too_young">Too young to be a CATS</string>
    <string name="email_exist">Email already in system</string>
    <string name="patient_exits">Patient already exists</string>
    <string name="name_format_error">Field can only accept alphabetical characters</string>
    <string name="action_add">Add New Item</string>
    <string name="action_search">Search Patiient</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_user_role">UserRoleActivity</string>
    <string name="name_input_hint">Enter name</string>
    <string name="desc_input_hint">Enter description</string>
    <string name="btn_save_label">Save</string>
    <string name="contactDate">Date of contact</string>
    <string name="level_of_care_label">Current Level of care</string>
    <string name="location_label">Place of Contact</string>
    <string name="position_label">Contacted By</string>
    <string name="reason_label">Reason</string>
    <string name="external_referral_label">External Referral</string>
    <string name="internal_referral_label">Internal Referral</string>
    <string name="stable_label">Stable</string>
    <string name="enhanced_label">Enhanced</string>
    <string name="intensive_label">Intensive</string>
    <string name="subjective_hint">Subjective</string>
    <string name="objective_hint">Objective</string>
    <string name="assessments_label">Assessments</string>
    <string name="plan_hint">Plan</string>
    <string name="follow_up_label">Follow Up</string>
    <string name="action_taken_label">Action Taken</string>
    <string name="btn_next_label">Next</string>
    <string name="patient_search">Search using first name, last name or both</string>
    <string name="btn_search">Search Patient</string>
    <string name="required_field_error">Field is required</string>
    <string name="email_format_error">Please enter a valid email</string>
    <string name="duplicate_item_error">Item already exists</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="first_name_input_hint">Enter first name</string>
    <string name="chronic_infection_prompt">Infection</string>
    <string name="current_status_prompt">Current Status</string>
    <string name="last_name_input_hint">Enter last name</string>
    <string name="username_input_hint">Enter username</string>
    <string name="password_input_hint">Enter password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="middle_name_input_hint">Enter middle name</string>
    <string name="mobile_number_input_hint">Enter mobile number</string>
    <string name="district_prompt">--Select District--</string>
    <string name="province_prompt">--Select Province--</string>
    <string name="gender_prompt">--Select Gender--</string>
    <string name="facility_prompt">Clinic/Hospital (Where)</string>
    <string name="cause_prompt">Hospitalization</string>
    <string name="pgender_prompt">Select Primary Care Giver Gender</string>
    <string name="hiv_co_infection_prompt">Hiv Co-Infection</string>
    <string name="relationship_prompt">Relationship To Child</string>
    <string name="prompt">--Select Item--</string>
    <string name="mobile_owner_prompt">Own Mobile Phone</string>
    <string name="mobile_owner_relationship">Owner Relationship With Beneficiary</string>
    <string name="own_secondary_mobile_prompt">Own Secondary Mobile Phone</string>
    <string name="email_input_hint">Enter email</string>
    <string name="primary_clinic_district">Primary Clinic District</string>
    <string name="primary_clinic">Primary Clinic</string>
    <string name="support_district">Support District</string>
    <string name="support_group">Support Group</string>
    <string name="education">Education</string>
    <string name="education_level">Highest / Current Education Level</string>
    <string name="dob_input_hint">Enter date of birth</string>
    <string name="referer_prompt">--Select Referrer--</string>
    <string name="status_prompt">--Select Status--</string>
    <string name="soc_hist_relationship_prompt">Relationship</string>
    <string name="abuse_prompt">Have you ever been physically, sexually or mentally abused</string>
    <string name="abuse_type_prompt">Type of Abuse</string>
    <string name="disclosure_prompt">Did you tell anyone</string>
    <string name="abuse_outcome_prompt">Outcome</string>
    <string name="feel_safe_prompt">Do you feel safe where you live now</string>
    <string name="source_prompt">Source</string>
    <string name="arv_medicine_prompt">--Arv Medicine--</string>
    <string name="hiv_status_known">HIV Status Known</string>
    <string name="sexual_intercourse_prompt">Have you ever had sexual intercourse</string>
    <string name="sexually_active_prompt">Are you currently sexually active</string>
    <string name="condom_use_prompt">Do you use condoms</string>
    <string name="birth_control_prompt">Do you use any other form of birth control</string>
    <string name="transmission_mode">Mode of Transmission</string>
    <string name="disclosure_location">HIV Disclosure Location</string>
    <string name="disability">Has Disability</string>
    <string name="disability_categories">Disabilities</string>
    <string name="consent_to_photo">Consent Photo</string>
    <string name="consent_to_mhealth">Consent M-Health</string>
    <string name="vst_student">VST Student</string>
    <string name="vst_status">VST Status</string>
    <string name="cat">CATS Member</string>
    <string name="save_success_message">Record successfully saved</string>
    <string name="young_mum_group">Is In Young Mum\'s Group</string>
    <string name="btn_login_label">Login</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="date_format_error">Enter valid date in this format: 22/01/2016</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_province">ProvinceActivity</string>
    <string name="title_activity_district">DistrictActivity</string>
    <string name="title_activity_district_list">DistrictListActivity</string>
    <string name="title_activity_facility">Facility</string>
    <string name="title_activity_facility_list">FacilityListActivity</string>
    <string name="title_activity_education">EducationActivity</string>
    <string name="title_activity_education_list">EducationListActivity</string>
    <string name="title_activity_education_level">EducationLevelActivity</string>
    <string name="title_activity_education_level_list">EducationLevelListActivity</string>
    <string name="title_activity_internal_refferal">InternalRefferalActivity</string>
    <string name="title_activity_internal_refferal_list">InternalRefferalListActivity</string>
    <string name="title_activity_level_of_care">LevelOfCareActivity</string>
    <string name="title_activity_level_of_care_list">LevelOfCareListActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="title_activity_mental_health">MentalHealthActivity</string>
    <string name="title_activity_mental_health_list">MentalHealthListActivity</string>
    <string name="title_activity_orphan_status">OrphanStatus</string>
    <string name="title_activity_orphan_status_list">OrphanStatusListActivity</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="title_activity_position_list">PositionListActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_petient">PetientActivity</string>
    <string name="title_activity_arv_hist">ArvHistActivity</string>
    <string name="title_activity_arv_adverse_effect">ArvAdverseEffectActivity</string>
    <string name="title_activity_srh_hist">SrhHistActivity</string>
    <string name="title_activity_social_hist">SocialHistActivity</string>
    <string name="title_activity_patient_list">PatientListActivity</string>
    <string name="title_activity_chronic_infection_item">ChronicInfectionItemActivity</string>
    <string name="title_activity_medical_hist">MedicalHistActivity</string>
    <string name="title_activity_hiv_con_infection_item">HivConInfectionItemActivity</string>
    <string name="title_activity_mental_health_item">MentalHealthItemActivity</string>
    <string name="title_activity_obstetric_hist">ObstetricHistActivity</string>
    <string name="title_activity_substance_item">SubstanceItemActivity</string>
    <string name="title_activity_family">FamilyActivity</string>
    <string name="title_activity_dependant">DependantActivity</string>
    <string name="title_activity_arv_hist_list">ArvHistListActivity</string>
    <string name="title_activity_chronic_infection_item_list">ChronicInfectionItemListActivity</string>
    <string name="title_activity_social_hist_list">SocialHistListActivity</string>
    <string name="title_activity_family_list">FamilyListActivity</string>
    <string name="title_activity_mental_health_item_list">MentalHealthItemListActivity</string>
    <string name="title_activity_medical_hist_list">MedicalHistListActivity</string>
    <string name="title_activity_substance_item_list">SubstanceItemListActivity</string>
    <string name="title_activity_srh_hist_list">SrhHistListActivity</string>
    <string name="title_activity_hiv_con_infectio_item_list">HivConInfectioItemListActivity</string>
    <string name="title_activity_obstetric_hist_list">ObstetricHistListActivity</string>
    <string name="title_activity_dependant_list">DependantListActivity</string>
    <string name="title_activity_primary_care_giver">PrimaryCareGiverActivity</string>
    <string name="title_activity_primary_care_giver_list">PrimaryCareGiverListActivity</string>
    <string name="title_activity_patient_contact">PatientContactActivity</string>
    <string name="title_activity_cd4_count">Cd4CountActivity</string>
    <string name="title_activity_cd4_count_list">Cd4CountListActivity</string>
    <string name="title_activity_viral_load">ViralLoadActivity</string>
    <string name="title_activity_viral_load_list">ViralLoadListActivity</string>
    <string name="title_activity_change_patient_status">ChangePatientStatusActivity</string>
    <string name="title_activity_change_patient_status_list">ChangePatientStatusListActivity</string>
    <string name="title_activity_transfer_patient_support_group">TransferPatientSupportGroupActivity</string>
    <string name="title_activity_transfer_patient_support_group_list">TransferPatientSupportGroupListActivity</string>
    <string name="title_activity_transfer_patient_facility">TransferPatientFacilityActivity</string>
    <string name="title_activity_transfer_patient_facility_list">TransferPatientFacilityListActivity</string>
    <string name="title_activity_patient_history_dashboard">PatientHistoryDashboard</string>
    <string name="title_activity_arv_history_dashboard">ArvHistoryDashboard</string>
</resources>