<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                style="@style/TextViewLabel"
                android:text="@string/action_taken_label"
        />
        <Spinner
                android:id="@+id/actionTaken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:prompt="@string/prompt"
        />
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/ButtonStyle"
                android:text="@string/btn_save_label"
        />
    </LinearLayout>
</LinearLayout>
