<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstName"
                        android:hint="@string/first_name_input_hint"
                        android:textSize="@dimen/text_size"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lastName"
                        android:hint="@string/last_name_input_hint"
                        android:textSize="@dimen/text_size"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mobile_number"
                        android:hint="@string/mobile_number_input_hint"
                        android:textSize="@dimen/text_size"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:prompt="@string/prompt"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Relationship"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/relationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:prompt="@string/prompt"
            />
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    style="@style/ButtonStyle"
                    android:text="@string/btn_save_label"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
