<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
        >
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ageStartMen"
                    android:textSize="@dimen/text_size"
                    android:hint="How old were you when you started menstruating"
                    android:inputType="text"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
        >
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bleedHowOften"
                    android:hint="How often do you bleed"
                    android:textSize="@dimen/text_size"
                    android:inputType="text"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
        >
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bleedDays"
                    android:hint="How many days"
                    android:textSize="@dimen/text_size"
                    android:inputType="text"
            />
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexual_intercourse_prompt"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <Spinner
                android:id="@+id/sexualIntercourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:layout_marginTop="12dp"
                android:prompt="@string/prompt"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexually_active_prompt"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <Spinner
                android:id="@+id/sexuallyActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:layout_marginTop="12dp"
                android:prompt="@string/prompt"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condom_use_prompt"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <Spinner
                android:id="@+id/condomUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:layout_marginTop="12dp"
                android:prompt="@string/prompt"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_control_prompt"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <Spinner
                android:id="@+id/birth_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:layout_marginTop="12dp"
                android:prompt="@string/prompt"
        />

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/ButtonStyle"
                android:text="@string/btn_save_label"
        />

    </LinearLayout>
    </LinearLayout>
</ScrollView>
